--- a/style.scss
+++ b/style.scss
@@ -382,6 +382,9 @@ body {
               color: #00acee;
             }
         }
+      .copyright {
+          font-size: 1.2rem;
+          margin-bottom: 2rem;
       }
     }
 
@@ -1166,3 +1169,4 @@ margin: 8rem 0 7.5rem 0;
     }
   }
   }
+
