--- a/style.css
+++ b/style.css
@@ -1130,5 +1130,10 @@ body {
   .thanks_page_sec .thanks_br {
     display: block;
   }
+  .copyright {
+   font-size: 1.2rem;
+   text-aline: center;
+   margin-bottom: 2rem;
+      }
 }
 /*# sourceMappingURL=style.css.map */
