--- a/style.scss
+++ b/style.scss
@@ -1123,6 +1123,10 @@ margin: 8rem 0 7.5rem 0;
     }
   }
 }
+    .copyright {
+        font-size: 1.2rem;
+        text-aline: center;
+    }
 
 // サンクスページ
 .thanks_page_sec {
