--- a/style.css
+++ b/style.css
@@ -100,6 +100,10 @@ body {
   display: block;
 }
 
+#header .header_wrap ul li a:last-child {
+  text-shadow: 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #fff;
+}
+
 #header .header_wrap ul .logo {
   width: 8rem;
 }
@@ -111,6 +115,10 @@ body {
   line-height: 2;
   letter-spacing: 0.05em;
   padding: 12rem 0 16rem 25rem;
+}
+
+#header .header_wrap .main_visual_text .main_br {
+  display: none;
 }
 
 #header .header_wrap .main_visual1 {
@@ -196,7 +204,8 @@ body {
 
 #about .about_sec {
   background: url(images/About_back2_pc.svg) no-repeat center/cover;
-  height: 65rem;
+  height: 70rem;
+  margin-bottom: 7.8rem;
 }
 
 #about .about_sec .container {
@@ -211,6 +220,7 @@ body {
 
 #about .about_sec .container .about_h2 img {
   position: relative;
+  margin-top: 3rem;
 }
 
 #about .about_sec .container .about_box {
@@ -247,7 +257,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 3rem 8rem 8rem 5rem;
+  padding: 5rem;
   -webkit-box-shadow: 39px 0px 39px -30px rgba(0, 0, 0, 0.2) inset;
           box-shadow: 39px 0px 39px -30px rgba(0, 0, 0, 0.2) inset;
 }
@@ -317,7 +327,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-top: 2rem;
+  margin-top: 6rem;
 }
 
 #work .work_sec .work_list ul li {
@@ -408,9 +418,14 @@ body {
 #contact .contact_wrap .contact_box .contact_right .c_form .submit-btn input {
   width: 10rem;
   height: 3rem;
-  background-color: transparent;
-  border: 1px solid  #28211C;
-  color: #28211C;
+  background-color: #687784;
+  border: none;
+  border-radius: 3rem;
+  color: #ffffff;
+}
+
+#contact .contact_wrap .contact_box .contact_right .c_form .submit-btn input:hover {
+  opacity: 0.8;
 }
 
 #contact .contact_wrap .fs_icons {
@@ -420,7 +435,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin: 10rem 0 5rem 0;
+  margin: 8rem 0 5rem 0;
   font-size: 3.6rem;
   color: #1B333F;
 }
@@ -435,6 +450,9 @@ body {
 }
 
 @media screen and (max-width: 820px) {
+  #header .header_wrap ul li a:last-child {
+    text-shadow: none;
+  }
   #header .header_wrap .sp_logo {
     display: block;
     width: 10rem;
@@ -466,7 +484,7 @@ body {
     height: 85rem;
   }
   #contact .contact_wrap .container {
-    padding: 0 2rem;
+    padding: 0 3rem;
   }
   #contact .contact_wrap .container .contact_box {
     display: block;
@@ -475,7 +493,7 @@ body {
     text-align: center;
   }
   #contact .contact_wrap .container .contact_box .contact_left .contact_text {
-    margin: 4.9rem 0 6.5rem 0;
+    margin: 4rem 0 4rem 0;
     font-size: 2.1rem;
   }
   #contact .contact_wrap .container .contact_box .contact_right {
@@ -503,8 +521,11 @@ body {
     margin: 3rem 15rem 0 0;
   }
   #contact .contact_wrap .fs_icons {
-    margin: 3rem 0 3rem 0;
+    margin: 5rem 0 3rem 0;
     font-size: 2.9rem;
+  }
+  #contact .contact_wrap .copyright {
+    margin: 2rem 0 0 0;
   }
   /* ハンバーガーメニュー */
   .pc_nav {
@@ -598,8 +619,11 @@ body {
     width: 7.5rem;
   }
   #header .header_wrap .main_visual_text .main_text {
-    font-size: 4.8vw;
-    padding: 26.7rem 0 14.6rem 2rem;
+    font-size: 7.47vw;
+    padding: 26.7rem 0 14.6rem 6rem;
+  }
+  #header .header_wrap .main_visual_text .main_br {
+    display: block;
   }
   #header .header_wrap .main_visual1 {
     width: 25.9rem;
@@ -677,10 +701,13 @@ body {
   }
   #service .service_sec .container ul li {
     width: 100%;
-    padding: 0 5.3rem;
+    padding: 0 2rem;
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
     margin-bottom: 5.3rem;
+  }
+  #service .service_sec .container ul li .service_icon img {
+    width: 12rem;
   }
   #service .service_sec .container ul li .service_title {
     font-size: 1.8rem;
@@ -703,7 +730,7 @@ body {
     width: 21.6rem;
   }
   #contact .contact_wrap .container .contact_box .contact_left .contact_text {
-    margin: 5rem 0 5rem 0;
+    margin: 4rem 0 4rem 0;
     font-size: 3.73vw;
   }
   #contact .contact_wrap .container .contact_box .contact_right {
@@ -720,6 +747,12 @@ body {
   }
   #contact .contact_wrap .container .contact_box .contact_right .c_form .submit-btn {
     margin: 3rem 0 0 0;
+  }
+  #contact .contact_wrap .fs_icons {
+    margin: 4rem 0 2rem 0;
+  }
+  #contact .contact_wrap .copyright {
+    margin-top: 3rem;
   }
 }
 
@@ -880,6 +913,10 @@ body {
   font-size: 1.6rem;
   text-align: center;
   margin-bottom: 5rem;
+}
+
+.about_page_sec .copyright {
+  text-align: center;
 }
 
 @media screen and (max-width: 820px) {
@@ -1133,8 +1170,8 @@ body {
 }
 
 .copyright {
-   font-size: 1.2rem;
-   text-aline: center;
-   margin-bottom: 2rem;
-      }
+  font-size: 1.2rem;
+  text-align: center;
+  margin-bottom: 2rem;
+}
 /*# sourceMappingURL=style.css.map */
