--- a/style.scss
+++ b/style.scss
@@ -97,7 +97,7 @@ body {
                   }
                 }
           }
-      .logo {
+      .logo1 {
         width: 8rem;
       }
       }
@@ -272,11 +272,11 @@ body {
         }
           .service_title {
             font-size: 2.8rem;
-            margin:6rem 0  6rem 0;
+            margin:6rem 0  2rem 0;
           }
           .service_text {
             font-size: $fs16;
-            line-height: 1.6;
+            line-height: 1.8;
             letter-spacing: 0.05em;
             text-align: justify;
           }
@@ -395,8 +395,18 @@ body {
             }
         }
       }
+      
     }
 
+    // トップへボタン
+    .to_top_button {
+      width: 30px;
+      position: fixed;
+      right: 20px;
+      bottom: 20px;
+
+  }
+  
     // scrollify.jsに関係する記述はここかから
     //  .scrollify{
     //    width: 100%;
@@ -422,7 +432,6 @@ body {
       //    z-index: 9999;
       //    width: 300px;
       //  }
-
 
     //  タブレットレスポンシブ 
      @media screen and (max-width: 820px) {
@@ -465,6 +474,9 @@ body {
              }
              .about_box {
                .about_right {
+                p{
+                  box-shadow: none;
+                }
                  .readmore_btn1 {
                   right: 4rem;
                   bottom: 2rem
@@ -649,6 +661,7 @@ body {
         background:url(images/About_back2_sp@2x.png) no-repeat /auto;
          position: relative;
         height: 72.5rem;
+        margin-bottom: 4.8rem;
         .container {
           .about_back {
              display: none;
@@ -682,7 +695,7 @@ body {
               left: -2rem;
                 p {
                   font-size: $fs16;
-                  padding: 6rem 2.5rem 3rem 4rem;
+                  padding: 6rem 2rem 3rem 4rem;
                   box-shadow: none ;
                   line-height: 1.6;
                   .sp_br {
@@ -722,7 +735,7 @@ body {
             width: 100%;
             padding: 0 2rem;
             box-sizing: border-box;
-            margin-bottom: 5.3rem;
+            margin-bottom: 4.8rem;
             .service_icon {
               img {
                 width: 12rem;
@@ -743,6 +756,7 @@ body {
 }
     #work {
       .work_sec {
+        margin-bottom: 4.8rem;
         h2 {
           img {
             width: 15rem;
@@ -798,6 +812,14 @@ body {
    }
  }
 
+  // トップへボタン
+  .to_top_button {
+    width: 2.5rem;
+    position: fixed;
+    right: 0.5rem;
+    bottom: 0.5rem;
+}
+
 }
 
 
@@ -816,6 +838,7 @@ body {
         border-radius: 0px;
       }
     }
+    
   }
 
 .about_page_h2 {
@@ -844,6 +867,18 @@ margin: 8rem 0 7.5rem 0;
   display: flex;
   justify-content: space-between;
 .profile_left {
+  // フェードイン
+  animation: fadeIn 1s ease 1s 1 normal backwards;
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
  
   width: 45%;
   .fs_icons {
@@ -864,9 +899,26 @@ margin: 8rem 0 7.5rem 0;
 .profile_right {
   width: 55%;
   padding-left: 5%;
+  // フェードイン
+  animation: fadeIn 2s ease 1s 1 normal backwards;
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
 
   .profile_text1 {
+    font-size: $fs16;
     letter-spacing: 0.05em;
+    line-height: 1.5;
+    text-align: justify;
+    margin-bottom: 3.5rem;
+    margin-bottom: 3.5rem;
   }
 
   .profile_name {
@@ -876,14 +928,17 @@ margin: 8rem 0 7.5rem 0;
 
   .profile_title {
     font-size: 2.4rem;
-    margin-bottom: 2.5rem;
+    margin-bottom: 1.5rem;
   }
 
   .profile_text {
     font-size: $fs16;
-    line-height: 1.5;
+    line-height: 1;
     text-align: justify;
     margin-bottom: 3.5rem;
+  }
+  .profile_birth {
+    margin-bottom: 1.5rem;
   }
   
   .profile_box2 {
@@ -934,7 +989,7 @@ margin: 8rem 0 7.5rem 0;
   br{display: none;}
   }
   .contact_btn {
-    margin: 5rem 0 5.1rem 0;
+    margin: 2rem 0 5.1rem 0;
   }
 }
 .back_to_top {
@@ -964,7 +1019,7 @@ margin: 8rem 0 7.5rem 0;
   .about_page_sec {
   background: none;
     .container {
-
+        margin-bottom: 10rem;
       .about_page_h2 {
         margin: 0;
         img {
@@ -1006,6 +1061,7 @@ margin: 8rem 0 7.5rem 0;
          }
          .profile_text {
            font-size: 4.27vw;
+           line-height: 1.5;
          }
          .profile_box2 {
            display: block;
@@ -1027,7 +1083,11 @@ margin: 8rem 0 7.5rem 0;
     .c_form2 {
       .c_form2_text {
         font-size: 1.3rem;
+        line-height: 1.5;
         margin:5rem 0 1.3rem 0;
+        br {
+          display: block;
+        }
       }
       .contact_btn {
         width: 135px;
@@ -1107,7 +1167,7 @@ margin: 8rem 0 7.5rem 0;
     br {display: none;}
     }
     .contact_btn {
-      margin: 5rem 0 5.1rem 0;
+      margin:2rem 0 5.1rem 0;
     }
   }
   .back_to_top {
@@ -1158,7 +1218,10 @@ margin: 8rem 0 7.5rem 0;
     .c_form2 {
       .c_form2_text {
         font-size: 1.3rem;
-        margin:5rem 0 1.3rem 0;
+        margin:10rem 0 1.3rem 0;
+        br {
+          display: block;
+        }
       }
       .contact_btn {
         width: 135px;
