--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ body {
   text-shadow: 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #fff;
 }
 
-#header .header_wrap ul .logo {
+#header .header_wrap ul .logo1 {
   width: 8rem;
 }
 
@@ -309,12 +309,12 @@ body {
 
 #service .service_sec ul li .service_title {
   font-size: 2.8rem;
-  margin: 6rem 0  6rem 0;
+  margin: 6rem 0  2rem 0;
 }
 
 #service .service_sec ul li .service_text {
   font-size: 1.6rem;
-  line-height: 1.6;
+  line-height: 1.8;
   letter-spacing: 0.05em;
   text-align: justify;
 }
@@ -449,6 +449,13 @@ body {
   color: #00acee;
 }
 
+.to_top_button {
+  width: 30px;
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+}
+
 @media screen and (max-width: 820px) {
   #header .header_wrap ul li a:last-child {
     text-shadow: none;
@@ -472,6 +479,10 @@ body {
   }
   #about .about_sec .container .about_h2 {
     z-index: 99;
+  }
+  #about .about_sec .container .about_box .about_right p {
+    -webkit-box-shadow: none;
+            box-shadow: none;
   }
   #about .about_sec .container .about_box .about_right .readmore_btn1 {
     right: 4rem;
@@ -637,6 +648,7 @@ body {
     background: url(images/About_back2_sp@2x.png) no-repeat/auto;
     position: relative;
     height: 72.5rem;
+    margin-bottom: 4.8rem;
   }
   #about .about_sec .container .about_back {
     display: none;
@@ -670,7 +682,7 @@ body {
   }
   #about .about_sec .container .about_box .about_right p {
     font-size: 1.6rem;
-    padding: 6rem 2.5rem 3rem 4rem;
+    padding: 6rem 2rem 3rem 4rem;
     -webkit-box-shadow: none;
             box-shadow: none;
     line-height: 1.6;
@@ -704,7 +716,7 @@ body {
     padding: 0 2rem;
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
-    margin-bottom: 5.3rem;
+    margin-bottom: 4.8rem;
   }
   #service .service_sec .container ul li .service_icon img {
     width: 12rem;
@@ -716,6 +728,9 @@ body {
   #service .service_sec .container ul li .service_text {
     line-height: 1.25;
     letter-spacing: 0.03em;
+  }
+  #work .work_sec {
+    margin-bottom: 4.8rem;
   }
   #work .work_sec h2 img {
     width: 15rem;
@@ -753,6 +768,12 @@ body {
   }
   #contact .contact_wrap .copyright {
     margin-top: 3rem;
+  }
+  .to_top_button {
+    width: 2.5rem;
+    position: fixed;
+    right: 0.5rem;
+    bottom: 0.5rem;
   }
 }
 
@@ -802,7 +823,35 @@ body {
 }
 
 .about_page_sec .container .profile_box .profile_left {
+  -webkit-animation: fadeIn 1s ease 1s 1 normal backwards;
+          animation: fadeIn 1s ease 1s 1 normal backwards;
   width: 45%;
+}
+
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+    -webkit-transform: translateY(20px);
+            transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    -webkit-transform: translateY(20px);
+            transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
 }
 
 .about_page_sec .container .profile_box .profile_left .fs_icons {
@@ -829,10 +878,30 @@ body {
 .about_page_sec .container .profile_box .profile_right {
   width: 55%;
   padding-left: 5%;
+  -webkit-animation: fadeIn 2s ease 1s 1 normal backwards;
+          animation: fadeIn 2s ease 1s 1 normal backwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    -webkit-transform: translateY(20px);
+            transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
 }
 
 .about_page_sec .container .profile_box .profile_right .profile_text1 {
+  font-size: 1.6rem;
   letter-spacing: 0.05em;
+  line-height: 1.5;
+  text-align: justify;
+  margin-bottom: 3.5rem;
+  margin-bottom: 3.5rem;
 }
 
 .about_page_sec .container .profile_box .profile_right .profile_name {
@@ -842,14 +911,18 @@ body {
 
 .about_page_sec .container .profile_box .profile_right .profile_title {
   font-size: 2.4rem;
-  margin-bottom: 2.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .about_page_sec .container .profile_box .profile_right .profile_text {
   font-size: 1.6rem;
-  line-height: 1.5;
+  line-height: 1;
   text-align: justify;
   margin-bottom: 3.5rem;
+}
+
+.about_page_sec .container .profile_box .profile_right .profile_birth {
+  margin-bottom: 1.5rem;
 }
 
 .about_page_sec .container .profile_box .profile_right .profile_box2 {
@@ -906,7 +979,7 @@ body {
 }
 
 .about_page_sec .c_form2 .contact_btn {
-  margin: 5rem 0 5.1rem 0;
+  margin: 2rem 0 5.1rem 0;
 }
 
 .about_page_sec .back_to_top {
@@ -928,6 +1001,9 @@ body {
 @media screen and (max-width: 767px) {
   .about_page_sec {
     background: none;
+  }
+  .about_page_sec .container {
+    margin-bottom: 10rem;
   }
   .about_page_sec .container .about_page_h2 {
     margin: 0;
@@ -972,6 +1048,7 @@ body {
   }
   .about_page_sec .container .profile_box .profile_right .profile_text {
     font-size: 4.27vw;
+    line-height: 1.5;
   }
   .about_page_sec .container .profile_box .profile_right .profile_box2 {
     display: block;
@@ -989,7 +1066,11 @@ body {
   }
   .about_page_sec .c_form2 .c_form2_text {
     font-size: 1.3rem;
+    line-height: 1.5;
     margin: 5rem 0 1.3rem 0;
+  }
+  .about_page_sec .c_form2 .c_form2_text br {
+    display: block;
   }
   .about_page_sec .c_form2 .contact_btn {
     width: 135px;
@@ -1072,7 +1153,7 @@ body {
 }
 
 .work_page_sec .c_form2 .contact_btn {
-  margin: 5rem 0 5.1rem 0;
+  margin: 2rem 0 5.1rem 0;
 }
 
 .work_page_sec .back_to_top {
@@ -1117,7 +1198,10 @@ body {
   }
   .work_page_sec .c_form2 .c_form2_text {
     font-size: 1.3rem;
-    margin: 5rem 0 1.3rem 0;
+    margin: 10rem 0 1.3rem 0;
+  }
+  .work_page_sec .c_form2 .c_form2_text br {
+    display: block;
   }
   .work_page_sec .c_form2 .contact_btn {
     width: 135px;
