--- a/style.scss
+++ b/style.scss
@@ -1006,7 +1006,7 @@ margin: 8rem 0 7.5rem 0;
 // Aboutページタブレットレスポンシブ
 @media screen and (max-width: 820px) {
   .about_page_sec {
-  
+  padding: 2rem;
     .container {
       .about_page_text {
         font-size: 2.8rem;
@@ -1181,6 +1181,7 @@ margin: 8rem 0 7.5rem 0;
 // Workページspレスポンシブ
 @media screen and (max-width: 767px) {
   .work_page_sec {
+      padding: 2rem;
     .container {
       .work_page_h2  { 
         margin: 0;
