--- a/style.css
+++ b/style.css
@@ -454,7 +454,6 @@ body {
   position: fixed;
   right: 20px;
   bottom: 20px;
-  z-index: 9999;
 }
 
 @media screen and (max-width: 820px) {
@@ -775,6 +774,7 @@ body {
     position: fixed;
     right: 0.5rem;
     bottom: 0.5rem;
+    z-index: 9999;
   }
 }
 
@@ -1002,6 +1002,7 @@ body {
 @media screen and (max-width: 767px) {
   .about_page_sec {
     background: none;
+    padding: 2rem;
   }
   .about_page_sec .container {
     margin-bottom: 10rem;
@@ -1164,6 +1165,9 @@ body {
 }
 
 @media screen and (max-width: 767px) {
+  .work_page_sec {
+    padding: 2rem;
+  }
   .work_page_sec .container .work_page_h2 {
     margin: 0;
   }
