--- a/style.scss
+++ b/style.scss
@@ -404,7 +404,6 @@ body {
       position: fixed;
       right: 20px;
       bottom: 20px;
-      z-index: 9999;  
 
   }
   
@@ -744,7 +743,7 @@ body {
             }
               .service_title {
                 font-size: $fs18;
-                margin:2.5rem 0  2.5rem 0;
+                margin: 3rem 0 1.5rem 0;
               }
               .service_text {
                 line-height: 1.25;
@@ -819,6 +818,7 @@ body {
     position: fixed;
     right: 0.5rem;
     bottom: 0.5rem;
+    z-index: 9999;
 }
 
 }
@@ -1006,7 +1006,7 @@ margin: 8rem 0 7.5rem 0;
 // Aboutページタブレットレスポンシブ
 @media screen and (max-width: 820px) {
   .about_page_sec {
-  padding: 2rem;
+  
     .container {
       .about_page_text {
         font-size: 2.8rem;
@@ -1019,6 +1019,7 @@ margin: 8rem 0 7.5rem 0;
 @media screen and (max-width: 767px) {
   .about_page_sec {
   background: none;
+  padding: 2rem;
     .container {
         margin-bottom: 10rem;
       .about_page_h2 {
@@ -1181,7 +1182,7 @@ margin: 8rem 0 7.5rem 0;
 // Workページspレスポンシブ
 @media screen and (max-width: 767px) {
   .work_page_sec {
-      padding: 2rem;
+    padding: 2rem;
     .container {
       .work_page_h2  { 
         margin: 0;
@@ -1191,10 +1192,12 @@ margin: 8rem 0 7.5rem 0;
         }
       }
       .work_title {
-        font-size: $fs18;
+        font-size: 2.4rem;
+        letter-spacing: 0.05em;
       }
       .work_text{
-        font-size: 1.2rem;
+        font-size: 1.6rem;
+        line-height: 1.5;
       }
       .work_box {
        display: block;
