--- a/style.scss
+++ b/style.scss
@@ -19,8 +19,14 @@ dd {
     padding: 0;
     line-height: 1;
     color: #28211C;
-    font-family: "游ゴシック体", YuGothic, "游ゴシック Medium",
-    "Yu Gothic Medium", "游ゴシック", "Yu Gothic", sans-serif;
+    // font-family: "游ゴシック体", YuGothic, "游ゴシック Medium",
+    // "Yu Gothic Medium", "游ゴシック", "Yu Gothic", sans-serif;
+    font-family:"Helvetica Neue",
+    Arial,
+    "Hiragino Kaku Gothic ProN",
+    "Hiragino Sans",
+    Meiryo,
+    sans-serif;
     font-feature-settings: "palt";
 }
 
